--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "magic-patterns-vite-template",
+  "name": "portfolio-backend",
   "version": "0.0.1",
   "private": true,
+  "author": "Siam Rahman",
   "type": "module",
   "scripts": {
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "react": "^18.3.1",
